[package]
name = "slowlo-rs"
version = "0.1.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
fakeit = "1.1.1"
futures = "0.3.14"
tokio = {version = "1.5.0", features = ["rt", "macros", "net", "io-util", "time"]}
